# ota_corpus

./: .gitignore  LICENSE  README.md  annotate.py  doubri_run.sh  footer.py  get_corpus_data.sh  get_texts_sample.py  kutoten.py  modify.py  multi_warc.sh  nanigo.py  ngurl.py  ngword.py  parallel_run.sh  parallel_step1_run.sh  parallel_step2_run.sh  parallel_step3_run.sh  pyproject.toml  quality.py  sample.sh  single_warc_step1.sh  single_warc_step2.sh  warc2raw.py
doubri/: ACKNOWLEDGEMENTS  CMakeLists.txt  LICENSE  README.md  common.h  dedup.cc  flag.hpp  flag_apply.cc  index.hpp  merge.cc  minhash.cc  minhash.hpp  similarity.cc
doubri-1.0/: ACKNOWLEDGEMENTS  CMakeLists.txt  Makefile  common.h  dedup_other.cc  dedup_self.cc  flag_init.cc  minhash.cc  minhash.h
doubri/scripts/: build.sh  dedup.sh  prepare.sh
doubri/test/enron_spam_data/: build-dataset.py  evaluate-flag.py  run-all.sh  run.sh
